Updated User Management
